--- a/main.scss
+++ b/main.scss
@@ -23,6 +23,8 @@
     .menuKutu{
         margin-top: 45px;
         margin-left: 450px;
+        width: 720px;
+        height: 60px;
         ul{
 
             li{
@@ -53,67 +55,7 @@
             }
         }
     }
-    .searchBox{
-        margin-left: 1500px;
-        margin-top: 75px;
-        form{
-            transform: translate(-50%,-50%);
-            width: 50px;
-            height: 50px;
-            background: white;
-            box-sizing: border-box;
-            border-radius: 25px;
-            border: 4px solid white;
-            padding: 5px;
-            top: 50%;
-            left: 50%;
-            transition: all 500ms;
     
-            &:hover{
-                width: 300px;
-                cursor: pointer;
-    
-                .fa{
-                    background: #07051a;
-                    color: white;
-                }
-            }
-    
-            &:hover input{
-                display: block;
-            }
-        }
-        
-        input{
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;;
-            height: 42.5px;
-            line-height: 30px;
-            outline: 0;
-            border: 0;
-            display: none;
-            font-size: 1em;
-            border-radius: 20px;
-            padding: 0 20px;
-        }
-        
-        .fa{
-            box-sizing: border-box;
-            padding: 10px;
-            width: 42.5px;
-            height: 42.5px;
-            position: absolute;
-            top: 0;
-            right: 0;
-            border-radius: 50%;
-            color: #07051a;
-            text-align: center;
-            font-size: 1.2em;
-            transition: all 1s;
-        }
-    }
     
 }
 
@@ -168,10 +110,54 @@
                         margin-top: 20px;
                     }
                 }
-
-                
+           
             }
+                   
+        }
+
+        .japon-araba-kutu{
+            width: 675px;
+            height: 155px;
+            padding-top: 1px;
+            display: block;
+            color: #000;
+            border:1px solid #000;
             
+            img{
+                margin-top: 7px;
+                margin-left: 10px;
+                float: left;
+            }
+
+            h1{
+                text-align: center;
+                margin-top: 58px;
+            }
+
+        }
+
+        .japon-araba-kutu{
+            width: 675px;
+            height: 155px;
+            padding-top: 1px;
+            display: block;
+            color: #000;
+            border:1px solid #000;
+            float: left;
+            
+            img{
+                margin-top: 7px;
+                margin-left: 10px;
+                float: left;
+            }
+
+            h1{
+                text-align: center;
+                margin-top: 58px;
+            }
+
+        }
+    
     }
 
     .contentRight{
@@ -185,12 +171,17 @@
         height: 775px;
         border: 1px solid #000;
 
+        h1{
+            text-align: center;
+            border-bottom: 1px solid #000;
+            padding: 5px;
+        }
+
         .sonAraba{
             width: 350px;
-            height: 191px;
+            height: 182px;
 
-            border-bottom: 1px solid #000;
-            padding: 1px;
+            padding-top: 1px;
 
             p{
                 font-size: 40px;
@@ -201,7 +192,6 @@
                 margin-top: 20px;
                 margin-left: 8px;
             }
-        }
         }
     }
 }
