--- a/main.css
+++ b/main.css
@@ -24,6 +24,8 @@
 .header .menuKutu {
   margin-top: 45px;
   margin-left: 450px;
+  width: 720px;
+  height: 60px;
 }
 
 .header .menuKutu ul li {
@@ -57,74 +59,6 @@
 .header .menuKutu ul .sag {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-}
-
-.header .searchBox {
-  margin-left: 1500px;
-  margin-top: 75px;
-}
-
-.header .searchBox form {
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 50px;
-  height: 50px;
-  background: white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 25px;
-  border: 4px solid white;
-  padding: 5px;
-  top: 50%;
-  left: 50%;
-  -webkit-transition: all 500ms;
-  transition: all 500ms;
-}
-
-.header .searchBox form:hover {
-  width: 300px;
-  cursor: pointer;
-}
-
-.header .searchBox form:hover .fa {
-  background: #07051a;
-  color: white;
-}
-
-.header .searchBox form:hover input {
-  display: block;
-}
-
-.header .searchBox input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 42.5px;
-  line-height: 30px;
-  outline: 0;
-  border: 0;
-  display: none;
-  font-size: 1em;
-  border-radius: 20px;
-  padding: 0 20px;
-}
-
-.header .searchBox .fa {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px;
-  width: 42.5px;
-  height: 42.5px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border-radius: 50%;
-  color: #07051a;
-  text-align: center;
-  font-size: 1.2em;
-  -webkit-transition: all 1s;
-  transition: all 1s;
 }
 
 .content {
@@ -183,32 +117,78 @@
   margin-top: 20px;
 }
 
-.content .contentRight {
+.content .japon-araba-kutu {
+  width: 675px;
+  height: 155px;
+  padding-top: 1px;
+  display: block;
+  color: #000;
+  border: 1px solid #000;
+}
+
+.content .japon-araba-kutu img {
+  margin-top: 7px;
+  margin-left: 10px;
+  float: left;
+}
+
+.content .japon-araba-kutu h1 {
+  text-align: center;
+  margin-top: 58px;
+}
+
+.content .japon-araba-kutu {
+  width: 675px;
+  height: 155px;
+  padding-top: 1px;
+  display: block;
+  color: #000;
+  border: 1px solid #000;
+  float: left;
+}
+
+.content .japon-araba-kutu img {
+  margin-top: 7px;
+  margin-left: 10px;
+  float: left;
+}
+
+.content .japon-araba-kutu h1 {
+  text-align: center;
+  margin-top: 58px;
+}
+
+.contentRight {
   width: 350px;
   height: 775px;
   margin-left: 1475px;
   margin-top: 20px;
 }
 
-.content .contentRight .sonBakilanArabalar {
+.contentRight .sonBakilanArabalar {
   width: 350px;
   height: 775px;
   border: 1px solid #000;
 }
 
-.content .contentRight .sonBakilanArabalar .sonAraba {
-  width: 350px;
-  height: 191px;
+.contentRight .sonBakilanArabalar h1 {
+  text-align: center;
   border-bottom: 1px solid #000;
-  padding: 1px;
+  padding: 5px;
 }
 
-.content .contentRight .sonBakilanArabalar .sonAraba p {
+.contentRight .sonBakilanArabalar .sonAraba {
+  width: 350px;
+  height: 182px;
+  padding-top: 1px;
+}
+
+.contentRight .sonBakilanArabalar .sonAraba p {
   font-size: 40px;
   text-align: center;
 }
 
-.content .contentRight .sonBakilanArabalar .sonAraba .arabalarinFotolari {
+.contentRight .sonBakilanArabalar .sonAraba .arabalarinFotolari {
   margin-top: 20px;
   margin-left: 8px;
 }
